# gentext-app

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: bigram_model.pkl  bigram_model.py  cnn_cifar10.pth  cnn_model.py  main.py
app/assignment_2/: cnn_train.py
