[project]
name = "gentext-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.36.0",
]
